Added markdownlint example and cmd+/

--- a/src/templates/partials/formatting.html
+++ b/src/templates/partials/formatting.html
@@ -9,6 +9,7 @@
 							<li>Code formatting</li>
 							<li>Trimming trailing spaces</li>
 							<li>Selections</li>
+							<li>Commenting out and back</li>
 						</ul>
 					</section>
 					<section>
@@ -19,6 +20,7 @@
 						<h2>Text Alignment</h2>
 						<img src="lib/img/align.gif" alt="">
 						<p class="hotkey">⌘ ⇧ P &rarr; Align</p>
+						<p class="hotkey">⌥ =</p>
 					</section>
 					<section>
 						<h2>Readme preview</h2>
@@ -67,5 +69,10 @@
 						<h2>Selections</h2>
 						<img src="lib/img/advanced.png" alt="">
 						<p class="hotkey">⌘ D → ⌘ ⇧ L</p>
+					</section>
+					<section>
+						<h2>Comments</h2>
+						<p class="hotkey">⌘ /</p>
+						<p>Sensible to language/syntax</p>
 					</section>
 				</section>
