--- a/src/templates/partials/linting.html
+++ b/src/templates/partials/linting.html
@@ -19,4 +19,17 @@
 						<h2>Markdownlint</h2>
 						<img src="lib/img/markdownlint.png" alt="" style="width:80%;">
 					</section>
+					<section>
+						<h2>Markdownlint</h2>
+						<pre><code class="hljs json" style="word-wrap: break-word;">
+"markdownlint.config": {
+"MD013": false,
+"MD014": false,
+"MD024": false,
+"MD033": false,
+"MD040": false,
+"MD007": { "indent": 4 }
+},
+						</code></pre>	
+					</section>
 				</section>
