:pencil2: fix Correct references to "Alabaster" theme
- [x] :pencil2: fix "Alebaster" => "Alabaster"
- [x] :truck: rename alebester.png => alabaster.png

--- a/src/templates/partials/customisation.html
+++ b/src/templates/partials/customisation.html
@@ -3,7 +3,7 @@
 						<h2>Customisation</h2>
 						<ul>
 							<li>Extensions</li>
-							<li>Alebaster Theme</li>
+							<li>Alabaster Theme</li>
 							<li>Material icon pack</li>
 							<li>FiraCode</li>
 						</ul>
@@ -21,8 +21,8 @@
 						</ul>
 					</section>
 					<section>
-						<h2>Alebaster theme</h2>
-						<img src="lib/img/alebaster.png" alt="" style="width:48%; float:left;">					
+						<h2>Alabaster theme</h2>
+						<img src="lib/img/alabaster.png" alt="" style="width:48%; float:left;">
 						<ul style="width:48%; float:right; margin-top: .9em; font-size: .8em;">
 							<li>Minimal amount of highlighting</li>
 							<li>Does not highlight standard language keywords (if, else, function etc.)</li>
